# undertone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/undertone/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: diarization-backends.md
docs/research/: 2026-06-23-model-research.md
skills/undertone/: SKILL.md
skills/undertone-connectors/: SKILL.md
skills/undertone-exports/: SKILL.md
skills/undertone-ingest/: SKILL.md
skills/undertone-meetings-ingest/: SKILL.md
skills/undertone-ops/: SKILL.md
skills/undertone/references/: connectors.md  exports.md  fingerprints.md  ingest.md  meetings.md  ops.md  upgrades.md
src/undertone_audio/: __init__.py  __main__.py  audio.py  cli.py  config.py  dedupe.py  export.py  pipeline.py  privacy.py  processes.py  schema.py  source_readiness.py  webhooks.py
src/undertone_audio/analytics/: __init__.py  fillers.py  gaps.py  talk.py  turns.py  voice.py
src/undertone_audio/commands/: __init__.py  common.py  connectors.py  core.py  fingerprints.py  ops.py  sources.py  webhook.py
src/undertone_audio/connectors/: __init__.py  base.py  podcast.py  web.py  youtube.py
src/undertone_audio/diarization/: __init__.py  fingerprint.py  merge.py  merge_speakers.py
src/undertone_audio/engines/: __init__.py  base.py  fluidaudio_cli.py  fluidaudio_hybrid.py  fluidaudio_pyannote.py
src/undertone_audio/enrichment/: __init__.py  linguistic.py  meeting_type.py
src/undertone_audio/sources/: __init__.py  meet.py  quill.py
src/undertone_audio/storage/: __init__.py  sqlite.py
src/undertone_audio/storage/migrations/: 001_core_initial.sql
tests/: test_audio_backends.py  test_cli.py  test_connectors.py  test_dedupe.py  test_full_audio_pipeline.py  test_pipeline_and_webhooks.py  test_processes.py  test_sources.py  test_store.py
